Lots of Updates

--- a/nba_database_connection.ipynb
+++ b/nba_database_connection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,32 @@
     "#from config import config\n",
     "from configparser import ConfigParser\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "\n",
+    "# UPDATE GAME RESULTS TABLE WITH REMAINING CSV DATA\n",
+    "\n",
+    "# CREATE A TEAM/G STATS TABLE\n",
+    "\n",
+    "# CREATE A OPPONENT/G STATS TABLE\n",
+    "\n",
+    "# THINK ABOUT HOW UPDATING TEAM / OPPENENT / G STATS LOOKS WHEN ADDING A SINGLE GAMES' DATA TO THE DATABASE DAILY\n",
+    "    # HOW SHOULD WIN STREAKS / RECENCY BE INCORPORATED IN THE MODEL? (For example, the mavs defense after trade acquisitions)\n",
+    "    # Think about how we can start using individual player data to predict team performance (this would help account for injuries, etc)\n",
+    "    # Would need a player availability table with date, player, injury status (which could also be a predictor)\n",
+    "    # Could use player stats against that given team / player combo to create a new predictor (separate model needed) \n",
+    "    # to determine if the particular matchup is favorable, not favorable, etc\n",
+    "    # far fetched idea - use sentiment analysis from twitter to determine if a particular player is expected to perform favorably\n",
+    "\n",
+    "\n",
+    "# IDEA - CAN TRAIN THE MODEL / webscraping ON WNBA DATA"
    ]
   },
   {
@@ -26,183 +52,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>visitor</th>\n",
-       "      <th>home</th>\n",
-       "      <th>dates</th>\n",
-       "      <th>visitor_score</th>\n",
-       "      <th>home_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PHIBOS20221018</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>20221018</td>\n",
-       "      <td>117</td>\n",
-       "      <td>126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LALGSW20221018</td>\n",
-       "      <td>LAL</td>\n",
-       "      <td>GSW</td>\n",
-       "      <td>20221018</td>\n",
-       "      <td>109</td>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ORLDET20221019</td>\n",
-       "      <td>ORL</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>20221019</td>\n",
-       "      <td>109</td>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>WASIND20221019</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>20221019</td>\n",
-       "      <td>114</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HOUATL20221019</td>\n",
-       "      <td>HOU</td>\n",
-       "      <td>ATL</td>\n",
-       "      <td>20221019</td>\n",
-       "      <td>107</td>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1315</th>\n",
-       "      <td>MIADEN20230601</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>20230601</td>\n",
-       "      <td>93</td>\n",
-       "      <td>104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1316</th>\n",
-       "      <td>MIADEN20230604</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>20230604</td>\n",
-       "      <td>111</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1317</th>\n",
-       "      <td>DENMIA20230607</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>20230607</td>\n",
-       "      <td>109</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1318</th>\n",
-       "      <td>DENMIA20230609</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>20230609</td>\n",
-       "      <td>108</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1319</th>\n",
-       "      <td>MIADEN20230612</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>20230612</td>\n",
-       "      <td>89</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1320 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  id visitor home     dates  visitor_score  home_score\n",
-       "0     PHIBOS20221018     PHI  BOS  20221018            117         126\n",
-       "1     LALGSW20221018     LAL  GSW  20221018            109         123\n",
-       "2     ORLDET20221019     ORL  DET  20221019            109         113\n",
-       "3     WASIND20221019     WAS  IND  20221019            114         107\n",
-       "4     HOUATL20221019     HOU  ATL  20221019            107         117\n",
-       "...              ...     ...  ...       ...            ...         ...\n",
-       "1315  MIADEN20230601     MIA  DEN  20230601             93         104\n",
-       "1316  MIADEN20230604     MIA  DEN  20230604            111         108\n",
-       "1317  DENMIA20230607     DEN  MIA  20230607            109          94\n",
-       "1318  DENMIA20230609     DEN  MIA  20230609            108          95\n",
-       "1319  MIADEN20230612     MIA  DEN  20230612             89          94\n",
-       "\n",
-       "[1320 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game_results_23_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp_df = \"./game_results_2023_to_db.csv\"\n",
-    "game_results_23_df.to_csv(tmp_df, index_label='id', header=False)\n",
-    "f = open(tmp_df, 'r')"
+    "game_results_21_22_df = pd.read_csv('game_results_2021_2022.csv')\n",
+    "game_results_21_22_df.rename(columns={'Unnamed: 0': 'id'}, inplace = True)\n",
+    "game_results_21_22_df['id'] = game_results_21_22_df['visitor'] + game_results_21_22_df['home'] + game_results_21_22_df['dates'].apply(str)\n",
+    "game_results_21_22_df.set_index('id', inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_results_19_df = pd.read_csv('game_results_2019.csv')\n",
+    "game_results_19_df.rename(columns={'Unnamed: 0': 'id'}, inplace = True)\n",
+    "game_results_19_df['id'] = game_results_19_df['visitor'] + game_results_19_df['home'] + game_results_19_df['dates'].apply(str)\n",
+    "game_results_19_df.set_index('id', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_results_17_18_df = pd.read_csv('game_results_2017_2018.csv')\n",
+    "game_results_17_18_df.rename(columns={'Unnamed: 0': 'id'}, inplace = True)\n",
+    "game_results_17_18_df['id'] = game_results_17_18_df['visitor'] + game_results_17_18_df['home'] + game_results_17_18_df['dates'].apply(str)\n",
+    "game_results_17_18_df.set_index('id', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_results_15_16_df = pd.read_csv('game_results_2015_2016.csv')\n",
+    "game_results_15_16_df.rename(columns={'Unnamed: 0': 'id'}, inplace = True)\n",
+    "game_results_15_16_df['id'] = game_results_15_16_df['visitor'] + game_results_15_16_df['home'] + game_results_15_16_df['dates'].apply(str)\n",
+    "game_results_15_16_df.set_index('id', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_results_13_14_df = pd.read_csv('game_results_2013_2014.csv')\n",
+    "game_results_13_14_df.rename(columns={'Unnamed: 0': 'id'}, inplace = True)\n",
+    "game_results_13_14_df['id'] = game_results_13_14_df['visitor'] + game_results_13_14_df['home'] + game_results_13_14_df['dates'].apply(str)\n",
+    "game_results_13_14_df.set_index('id', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kc/tfm_mmns5096hfr18knr3rp40000gp/T/ipykernel_4246/3423246217.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  team_stats_per_game_df['id'] = team_stats_per_game_df['team'] + team_stats_per_game_df['year'].apply(str)\n",
+      "/var/folders/kc/tfm_mmns5096hfr18knr3rp40000gp/T/ipykernel_4246/3423246217.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  opponent_stats_per_game_df['id'] = opponent_stats_per_game_df['team'] + opponent_stats_per_game_df['year'].apply(str)\n",
+      "/var/folders/kc/tfm_mmns5096hfr18knr3rp40000gp/T/ipykernel_4246/3423246217.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  team_stats_per_game_df.drop_duplicates(inplace = True)\n",
+      "/var/folders/kc/tfm_mmns5096hfr18knr3rp40000gp/T/ipykernel_4246/3423246217.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  opponent_stats_per_game_df.drop_duplicates(inplace = True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_stats_df = pd.read_csv('all_team_stats.csv')\n",
+    "team_stats_df.rename(columns={'Unnamed: 0': 'id'}, inplace = True)\n",
+    "team_stats_per_game_df = team_stats_df[team_stats_df['player'] == 'Team/G']\n",
+    "opponent_stats_per_game_df = team_stats_df[team_stats_df['player'] == 'Opponent/G']\n",
+    "team_stats_per_game_df['id'] = team_stats_per_game_df['team'] + team_stats_per_game_df['year'].apply(str)\n",
+    "opponent_stats_per_game_df['id'] = opponent_stats_per_game_df['team'] + opponent_stats_per_game_df['year'].apply(str)\n",
+    "team_stats_per_game_df.set_index('id', inplace = True)\n",
+    "opponent_stats_per_game_df.set_index('id', inplace = True)\n",
+    "team_stats_per_game_df.drop_duplicates(inplace = True)\n",
+    "opponent_stats_per_game_df.drop_duplicates(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_team_per_game_stats_df = \"./team_per_game_stats_to_db.csv\"\n",
+    "team_stats_per_game_df.to_csv(tmp_team_per_game_stats_df, index_label='id', header=False)\n",
+    "f_team_per_game_stats = open(tmp_team_per_game_stats_df, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_opp_per_game_stats_df = \"./opp_per_game_stats_to_db.csv\"\n",
+    "opponent_stats_per_game_df.to_csv(tmp_opp_per_game_stats_df, index_label='id', header=False)\n",
+    "f_opp_per_game_stats = open(tmp_opp_per_game_stats_df, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2023 results dataset\n",
+    "#tmp_df = \"./game_results_2023_to_db.csv\"\n",
+    "#game_results_2023_df.to_csv(tmp_df, index_label='id', header=False)\n",
+    "#f = open(tmp_df, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_df_21_22 = \"./game_results_2021_2022_to_db.csv\"\n",
+    "game_results_21_22_df.to_csv(tmp_df_21_22, index_label='id', header=False)\n",
+    "f_21_22 = open(tmp_df_21_22, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_df_19 = \"./game_results_2019_to_db.csv\"\n",
+    "game_results_19_df.to_csv(tmp_df_19, index_label='id', header=False)\n",
+    "f_19 = open(tmp_df_19, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_df_17_18 = \"./game_results_2017_2018_to_db.csv\"\n",
+    "game_results_17_18_df.to_csv(tmp_df_17_18, index_label='id', header=False)\n",
+    "f_17_18 = open(tmp_df_17_18, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_df_15_16 = \"./game_results_2015_2016_to_db.csv\"\n",
+    "game_results_15_16_df.to_csv(tmp_df_15_16, index_label='id', header=False)\n",
+    "f_15_16 = open(tmp_df_15_16, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_df_13_14 = \"./game_results_2013_2014_to_db.csv\"\n",
+    "game_results_13_14_df.to_csv(tmp_df_13_14, index_label='id', header=False)\n",
+    "f_13_14 = open(tmp_df_13_14, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,16 +274,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'host': 'localhost',\n",
+       " 'database': 'NBA_Data',\n",
+       " 'user': 'postgres',\n",
+       " 'password': 'BrendaLee223'}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -268,10 +328,22 @@
     "        #db_version = crsr.fetchone()\n",
     "        #print(db_version)\n",
     "        \n",
-    "        cursor.execute(open('create_game_results_table.sql', 'r').read())\n",
+    "        # add all sql create table commands here\n",
+    "        #cursor.execute(open('create_game_results_table.sql', 'r').read())\n",
+    "        #cursor.execute(open('create_yearly_team_per_game_stats_table.sql', 'r').read())\n",
+    "        #cursor.execute(open('create_yearly_opponent_per_game_stats_table.sql', 'r').read())\n",
     "\n",
     "        try:\n",
-    "            cursor.copy_from(f, 'game_results', sep=\",\")\n",
+    "            #cursor.copy_from(f, 'game_results', sep=\",\")\n",
+    "            #cursor.copy_from(f_21_22, 'game_results', sep=\",\")\n",
+    "            #cursor.copy_from(f_19, 'game_results', sep=\",\")\n",
+    "            #cursor.copy_from(f_17_18, 'game_results', sep=\",\")\n",
+    "            #cursor.copy_from(f_15_16, 'game_results', sep=\",\")\n",
+    "            #cursor.copy_from(f_13_14, 'game_results', sep=\",\")\n",
+    "\n",
+    "            #cursor.copy_from(f_team_per_game_stats, 'yearly_team_per_game_stats', sep=\",\")\n",
+    "            #cursor.copy_from(f_opp_per_game_stats, 'yearly_opponent_per_game_stats', sep=\",\")\n",
+    "            \n",
     "            connection.commit()\n",
     "            print(\"copy_from_file() done\")\n",
     "            cursor.close()\n",
